--- a/maid-of-honor.html
+++ b/maid-of-honor.html
@@ -79,10 +79,10 @@ h1 {
 <div class="card">
   <div class="card-inner">
     <div class="card-front">
-      <img src="https://drive.google.com/uc?export=view&id=FRONT_FILE_ID" alt="Front of card">
+      <img src="https://drive.google.com/uc?export=view&id=1G70Vco5PbHVQrYfsGL9PhTTGee-vks4m" alt="Front of card">
     </div>
     <div class="card-back">
-      <img src="https://drive.google.com/uc?export=view&id=BACK_FILE_ID" alt="Back of card">
+      <img src="https://drive.google.com/uc?export=view&id=1Psq2XfGI5q3jJnvMwHjMhft7cgqSo80I" alt="Back of card">
     </div>
   </div>
 </div>
