--- a/maid-of-honor.html
+++ b/maid-of-honor.html
@@ -87,7 +87,7 @@ h1 {
   </div>
 </div>
 
-<p class="note">(Click or tap the card to flip)</p>
+<p class="note">(click or tap the card to flip)</p>
 
 </body>
 </html>
