--- a/maid-of-honor.html
+++ b/maid-of-honor.html
@@ -79,15 +79,15 @@ h1 {
 <div class="card">
   <div class="card-inner">
     <div class="card-front">
-      <img src="https://drive.google.com/uc?export=view&id=1G70Vco5PbHVQrYfsGL9PhTTGee-vks4m" alt="Front of card">
+      <img src="images/MOHA.png" alt="Front of card" />
     </div>
     <div class="card-back">
-      <img src="https://drive.google.com/uc?export=view&id=1Psq2XfGI5q3jJnvMwHjMhft7cgqSo80I" alt="Back of card">
+      <img src="images/MOHB.png" alt="Back of card" />
     </div>
   </div>
 </div>
 
-<p class="note">(♡♡♡click or tap the card to flip♡♡♡)</p>
+<p class="note">(Click or tap the card to flip)</p>
 
 </body>
 </html>
