--- a/maid-of-honor.html
+++ b/maid-of-honor.html
@@ -6,7 +6,7 @@
 <title>Maid of Honor Proposal</title>
 <style>
 body {
-  font-family: sans-serif;
+  font-family: petapon;
   background-color: #f8f8f8;
   display: flex;
   flex-direction: column;
