--- a/maid-of-honor.html
+++ b/maid-of-honor.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Maid of Honor Proposal</title>
+<title>JAZZLEEN+ANDRIANE</title>
 <style>
 body {
   font-family: petapon;
-  background-color: #f8f8f8;
+  background-color: #decde7;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -74,7 +74,7 @@ h1 {
 </head>
 <body>
 
-<h1>Maid of Honor Proposal</h1>
+<h1>JAZZLEEN+ANDRIANE</h1>
 
 <div class="card">
   <div class="card-inner">
@@ -87,7 +87,7 @@ h1 {
   </div>
 </div>
 
-<p class="note">(Click or tap the card to flip)</p>
+<p class="note">(click or tap the card to flip)</p>
 
 </body>
 </html>
