--- a/maid-of-honor.html
+++ b/maid-of-honor.html
@@ -6,7 +6,7 @@
 <title>JAZZLEEN+ANDRIANE</title>
 <style>
 body {
-  font-family: petapon;
+  font-family: noto-serif-display-extracondensed;
   background-color: #decde7;
   display: flex;
   flex-direction: column;
