--- a/maid-of-honor.html
+++ b/maid-of-honor.html
@@ -4,9 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>JAZZLEEN+ANDRIANE</title>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet" />
 <style>
 body {
-  font-family: noto-serif-display-extracondensed;
+  font-family: 'Noto Serif Display', serif;
   background-color: #decde7;
   display: flex;
   flex-direction: column;
