--- a/maid-of-honor.html
+++ b/maid-of-honor.html
@@ -4,9 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>JAZZLEEN + ANDRIANE</title>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet" />
 <style>
 body {
-  font-family: 'Georgia Pro', Georgia, serif;
+  font-family: 'Noto Serif Display', serif;
   background-color: #decde7;
   display: flex;
   flex-direction: column;
@@ -17,13 +18,19 @@ body {
   padding: 20px;
 }
 
-h1 {
-  font-size: 1.8rem;
-  color: #444;
-  margin-bottom: 20px;
-  text-align: center;
-}
-
+  h1 {
+    font-size: 1.8rem;
+    color: #444;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  h2 {
+    font-size: 0.9rem;
+    text-align: center;
+    color: #666;
+    margin-top: 5px;
+    letter-spacing: 0.2em;
+  }
 .card {
   width: 90vw;
   max-width: 500px; /* larger on desktop */
@@ -75,6 +82,7 @@ h1 {
 <body>
 
 <h1>JAZZLEEN + ANDRIANE</h1>
+<h2>10 | 24 | 25</h2>
 
 <div class="card">
   <div class="card-inner">
