--- a/maid-of-honor.html
+++ b/maid-of-honor.html
@@ -21,14 +21,14 @@ body {
   h1 {
     font-size: 1.8rem;
     color: #444;
-    margin-bottom: 5px;
+    margin-bottom: 2px;
     text-align: center;
   }
   h2 {
-    font-size: 0.9rem;
+    font-size: 1rem;
     text-align: center;
     color: #666;
-    margin-bottom: 20px;
+    margin-top: 0px;
     letter-spacing: 0.2em;
   }
 .card {
