--- a/maid-of-honor.html
+++ b/maid-of-honor.html
@@ -48,6 +48,7 @@ body {
   border-radius: 12px;
 }
 
+/* Flip when .is-flipped class is present */
 .card:hover .card-inner {
   transform: rotateY(180deg);
 }
