--- a/maid-of-honor.html
+++ b/maid-of-honor.html
@@ -47,7 +47,7 @@ body {
   box-shadow: 0 8px 20px rgba(0,0,0,0.2);
   border-radius: 12px;
 }
-
+/* Flip when .is-flipped class is present */
 .card-inner.is-flipped {
   transform: rotateY(180deg);
 }
@@ -96,14 +96,6 @@ body {
 </div>
 
 <p class="note">(click or tap the card to flip)</p>
-
-<script>
-  const card = document.getElementById('card');
-  const cardInner = card.querySelector('.card-inner');
-  card.addEventListener('click', () => {
-    cardInner.classList.toggle('is-flipped');
-  });
-</script>  
   
 </body>
 </html>
