--- a/maid-of-honor.html
+++ b/maid-of-honor.html
@@ -48,7 +48,8 @@ body {
   border-radius: 12px;
 }
 
-.card-inner.is-flipped {
+/* Flip on hover */
+.card:hover .card-inner {
   transform: rotateY(180deg);
 }
 
